--- a/reticulate_setup.Rmd
+++ b/reticulate_setup.Rmd
@@ -27,7 +27,8 @@ PYTHON_DEPENDENCIES = c("numpy", "joblib", "scikit-learn", "tensorflow",
 
 reticulate::virtualenv_create(envname = virtualenv_dir, python = python_path)
 
-reticulate::virtualenv_install(virtualenv_dir, packages = PYTHON_DEPENDENCIES,
+reticulate::virtualenv_install(virtualenv_dir, 
+                               packages = PYTHON_DEPENDENCIES,
                                ignore_installed=TRUE)
 
 reticulate::use_virtualenv(virtualenv_dir, required = TRUE)
